<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Application Info -->
    <string name="app_name">Simplicadet</string>
    <string name="version_info">Version 1.4b</string>
    <string name="copyright_info">© 2025 Simplicadet</string>
    <string name="current_language_display">Default</string>

    <!-- Navigation -->
    <string name="back_button">Back Button</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Main Screen -->
    <string name="main_title">Mission first, order always!</string>
    <string name="main_google">Continue with Google</string>
    <string name="main_facebook">Continue with Facebook</string>

    <!-- Authentication -->
    <string name="login_title">Log in</string>
    <string name="login_subtitle">Please sign in.</string>
    <string name="login_email">Email or username</string>
    <string name="signup_title">Sign up</string>
    <string name="signup_subtitle">Please sign up.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Username</string>

    <!-- Bottom Navigation -->
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_military">Military</string>
    <string name="title_premium">Premium</string>

    <!-- Account Information -->
    <string name="acc_name">Marius Gabriel</string>
    <string name="acc_points">82</string>
    <string name="acc_donate">Donate</string>
    <string name="acc_share">Share</string>
    <string name="acc_review">Review</string>
    <string name="acc_settings">Settings</string>

    <!-- Home Screen -->
    <string name="home_search">Search</string>
    <string name="home_order">Order</string>
    <string name="home_notes">Notes</string>
    <string name="home_formation">Formation</string>
    <string name="home_flow">Cards</string>
    <string name="home_tasks">Tasks</string>
    <string name="home_all">All</string>
    <string name="home_search_quiz">Quizzes and Tests</string>

    <!-- Notes Feature -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_search_notes">Search notes</string>
    <string name="home_add_note">Add Note</string>
    <string name="home_note_title">Note Title</string>
    <string name="home_note_subtitle">Note Subtitle</string>
    <string name="home_type_note_here">Type note here...</string>
    <string name="create_note_add">Add</string>
    <string name="leaderboard">Leaderboard</string>

    <!-- Placeholder Text -->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <!-- Ads and API IDs -->
    <string name="id_AppOpenAdd">ca-app-pub-8447567589954533/1110300440</string>
    <string name="id_InterstitialAdd">ca-app-pub-9534691024766923/7270158920</string>
    <string name="default_web_client_id">672731390392-c7fkrbjbm5c4nmvnt7v3bk00hadilk8v.apps.googleusercontent.com</string>
    <string name="facebook_app_id">2109357539444062</string>
    <string name="fb_login_protocol_scheme">fb2109357539444062</string>
    <string name="facebook_client_token">e0c5329da6c1f8460ece709873ff9cf8</string>
    <string name="gemini_api">AIzaSyAARirP0Qk9W3cCXf0h6UddVzMlIizD9s4</string>

    <!-- Settings Screen -->
    <string name="settings">Settings</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="edit_profile_image">Edit Profile Image</string>
    <string name="your_name">Your name</string>
    <string name="your_name_hint">Enter your name</string>
    <string name="about_you">About you</string>
    <string name="about_you_hint">Say something about you for the world to see</string>
    <string name="locked_email">Email is locked</string>

    <!-- App Settings Section -->
    <string name="app_settings">App Settings</string>
    <string name="appearance">Dark Theme</string>
    <string name="use_device_settings">Use device settings</string>
    <string name="sound_effects">Sound effects</string>
    <string name="app_icon">App icon</string>
    <string name="language">English</string>
    <string name="default_text">Default</string>
    <string name="whats_new">What\'s new</string>
    <string name="upload_file">Upload file</string>

    <!-- Contact Section -->
    <string name="contact_us">Contact us</string>
    <string name="follow_us">Follow us on X</string>
    <string name="like_facebook">Like us on Facebook</string>
    <string name="help">Help</string>
    <string name="terms_and_conditions">Feedback</string>
    <string name="privacy_policy">Privacy policy</string>

    <!-- Danger Zone -->
    <string name="danger_zone">Danger zone</string>
    <string name="delete_account">Delete account</string>
    <string name="reset_password">Reset password</string>
    <string name="log_out">Log out</string>

    <string name="access_denied">Access denied</string>
    <string name="login_organization_email">Please log in with your organization email to continue.</string>
    <string name="delete_note">Delete Note</string>
    <string name="note_confirmation">Are you sure you want to delete this note?</string>
    <string name="delete_task">Delete Task</string>
    <string name="task_confirmation">Are you sure you want to delete this task?</string>
    <string name="no_internet_title">No Internet!</string>
    <string name="no_internet_text">Some of the functions will not work properly, do you want to continue ?</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation">Are you sure you want to log out?</string>

    <string name="clear_cache">Clear memory</string>
    <string name="clear_cache_confirmation">Are you sure you want to clear the app cache? This will remove temporary files and may improve performance.</string>
    <string name="title_activity_test">TestActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_path_selector">PathSelector</string>
    <string name="community_weekly">Weekly</string>
    <string name="community_all_time">All Time</string>
    <string name="task_title">Task Title</string>

    <!-- Account Deletion -->
    <string name="delete_account_confirmation">Are you sure you want to delete your account? This action cannot be undone and will permanently remove all your data.</string>
    <string name="account_deleted_success">Your account has been successfully deleted.</string>
    <string name="account_deletion_reauth_required">Please log out and log back in, then try deleting your account again.</string>
    <string name="error_deleting_account">Failed to delete account. Please try again.</string>


    <!-- Password Reset -->
    <string name="reset_password_confirmation">Are you sure you want to reset your password? A reset link will be sent to your email address.</string>
    <string name="password_reset_email_sent">Password reset email sent. Please check your inbox and follow the instructions.</string>

    <!-- Error Messages -->
    <string name="error_opening_browser">Unable to open browser. Please try again.</string>
    <string name="error_no_email">No email address found for your account.</string>
    <string name="error_not_logged_in">You are not currently logged in.</string>
    <string name="error_sending_reset_email">Failed to send password reset email. Please try again.</string>
    <string name="error_no_email_app">No email app found on your device.</string>
    <string name="error_sending_email">Unable to open email app. Please try again.</string>


</resources>