<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="?attr/backgroundColor">

    <com.amar.library.ui.StickyScrollView
        android:id="@+id/contentLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:stickyHeader="@+id/layout_search">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/textSearch">

                <FrameLayout
                    android:id="@+id/search_img_profile"
                    android:layout_gravity="center_vertical"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/searchProfileButton"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center"
                        android:src="@raw/guest_civil"
                        app:shapeAppearanceOverlay="@style/circleImageView"
                        />

                    <ProgressBar
                        android:id="@+id/search_progress_bar"
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_gravity="center"
                        android:indeterminateOnly="false"
                        android:progress="58"
                        android:progressDrawable="@drawable/home_loading_civil"
                        android:rotation="-90" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/titleSearch"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:textColor="?attr/textNormal"
                    android:textSize="@dimen/_22ssp"
                    android:fontFamily="@font/circular_medium"
                    android:text="@string/home_search" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_search"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:orientation="vertical"
                android:background="?attr/backgroundColor"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_12sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:paddingStart="@dimen/_14sdp"
                    android:paddingEnd="@dimen/_14sdp"
                    android:orientation="vertical"
                    android:drawablePadding="@dimen/_14sdp"
                    android:layout_centerInParent="true"
                    android:ems="10"
                    android:maxLines="1"
                    android:elevation="4dp"
                    android:background="@drawable/uni_input_search"
                    android:drawableStart="@drawable/uni_ic_search"
                    android:hint="@string/home_search_quiz"
                    android:textSize="@dimen/_15ssp"
                    android:drawableTint="?attr/textDark"
                    android:textColor="?attr/textNormal"
                    android:textColorHint="?attr/textLight"
                    android:fontFamily="@font/circular_medium"
                    tools:ignore="VisualLintTextFieldSize"
                    app:layout_constraintStart_toStartOf="@id/textSearch"
                    app:layout_constraintTop_toBottomOf="@id/textSearch"/>
            </LinearLayout>

            <FrameLayout
                android:id="@+id/search_loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/text_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/loadingAnimationView"
                    android:layout_width="@dimen/_140sdp"
                    android:layout_height="@dimen/_140sdp"
                    android:layout_gravity="center_horizontal"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/anim_loading_blue" />

            </FrameLayout>


            <androidx.core.widget.NestedScrollView
                android:id="@+id/contentLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:scrollbars="none"
                android:visibility="gone"
                android:paddingBottom="@dimen/_110sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintStart_toStartOf="@id/text_search"
                app:layout_constraintTop_toBottomOf="@id/text_search">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/searchRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:layout_marginEnd="@dimen/_2sdp"
                        android:paddingBottom="@dimen/_40sdp"
                        android:nestedScrollingEnabled="false"/>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </com.amar.library.ui.StickyScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>